objects/ValidateSlot__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Through the type, model, start # and end # to verify whether the slot number is valid.</description>
    <fields>
        <fullName>AssetPN__c</fullName>
        <label>Asset PN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <description>Upper limit of slot number.</description>
        <label>End #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Model of products, such as NX-10700, NX-2100 and so on.</description>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <description>Lower limit of slot number.</description>
        <label>Start #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Two types in total, HDD and SSD.</description>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Valid Slot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Model__c</columns>
        <columns>AssetPN__c</columns>
        <columns>Type__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>